# upjohn-challenge-setup

./: .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerfile-postgres  docker-compose-psql.yml  docker-compose.yml  init.sql  makefile  pyproject.toml  pytest.ini
