[tool.poetry]
name = "upjohn-amino-coding-challenge"
version = "0.1.0"
description = ""
authors = ["Chad Upjohn <upjohnc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.13.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
isort = "^5.9.1"
black = "20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
/(
  # Directories
    \.eggs
  | \.git
  | \.vscode
  | build
  | venv
  | .*egg-info
)/
'''
